--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
        <li><a href=NewsIndex.html >Αναζήτηση Δείκτη</a></li>
        <li><a href=Articles.html >Άρθρα για την ευημερία από το ορίτζιναλ blog</a></li>
-       <a href="https://sickman.blog/" ><img src="../4.3 HTML Porfolio Project/assets/images/SickmanLogo.jpg" alt="Sickman GR Logo" height="200" width="200"/></a>
+       <a href="https://sickman.blog/" ><img src="https://github.com/VasilisSckmn/newsindex/blob/main/SickmanLogo.png?raw=true" alt="Sickman GR Logo" height="200" width="200"/></a>
 
     </ul>
     <hr>
